# app/Http/Requests/Users/UpdateUserRequest.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace App\Http\Requests\Users;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *      title="Update user request",
+ *      description="Store user request body data",
+ *      type="object",
+ *      required={"name"},
+ *
+ *      @OA\Property(
+ *         property="name",
+ *         title="name",
+ *         example="Sam"
+ *     ),
+ * )
+ */
+class UpdateUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|max:30',
+        ];
+    }
+}
