# routes/api.php
@@ -35,9 +35,18 @@ Route::namespace('App\Http\Controllers\Api')->group(function () {
             Route::delete('/', 'SkillController@delete');
         });
 
-        Route::prefix('/levels')->group(function() {
+        Route::prefix('/levels')->group(function () {
             Route::get('/all', 'SkillController@getAllLevels');
             Route::get('/search', 'SkillController@getLevelName');
         });
+    });
+
+    //Users
+    Route::prefix('/users')->group(function () {
+        Route::get('/', 'UserController@index');
+        Route::get('/{id}', 'UserController@get');
+        Route::post('/', 'UserController@store');
+        Route::put('/{id}', 'UserController@update');
+        Route::delete('/{id}', 'UserController@delete');
     });
 });
